# fastapp

./: .gitignore  pyproject.toml
fastapp/: main.py
tests/: test_fastapp.py
